2015-01-23  Jeroen T. Vermeulen <jtv@xs4all.nl>
 autogen.sh:
 - Drop search for specific (and now long obsolete) automake versions.
 configure.ac.in, src/Makefile.am, test/Makefile.am.template,
 test/unit/Makefile.am.template, tools/Makefile.am:
 - Use newer, zero-arg version of AM_INIT_AUTOMAKE.
 - Move AC_CONFIG_SRCDIR above AM_INIT_AUTOMAKE; may be required now.
 - Wrap source fragments in AC_LANG_SOURCE, and double-quote them.
2015-01-23  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/basic_connection.hxx, include/pqxx/compiler-public.hxx,
 include/pqxx/robusttransaction.hxx, include/pqxx/subtransaction.hxx,
 include/pqxx/transaction.hxx, src/connection_base.cxx, src/largeobject.cxx,
 src/notification.cxx, src/pipeline.cxx, src/tablereader.cxx,
 src/tablewriter.cxx, src/transaction_base.cxx:
 - Remove PQXX_QUIET_DESTRUCTORS.  Surely that Visual C++ 2003 bug's been fixed.
2015-01-23  Jeroen T. Vermeulen <jtv@xs4all.nl>
 configure.ac.in:
 - Make default inline symbol visibility of "hidden" work again.
 - Also make non-inline symbols hidden by default.
 include/pqxx/binarystring.hxx, src/binarystring.cxx:
 - Replace PQAlloc member with a reference to PQAlloc.
 - Less efficient, but conflicted with "hidden" inline visibility.
 - Becomes easier once we can require shared_ptr.
2015-01-22  Jeroen T. Vermeulen <jtv@xs4all.nl>
 configure.ac.in:
 - Add --with-postgres-include and --with-postgres-lib options.
 - Start using AS_IF() instead of plain shell "if".
 - Start using $() instead of ``.
2015-01-18  Jeroen T. Vermeulen <jtv@xs4all.nl>
 configitems, configure.ac.in, include/pqxx/binarystring.hxx,
 include/pqxx/compiler-public.hxx, include/pqxx/config.h.in,
 include/pqxx/cursor.hxx, include/pqxx/except.hxx,
 include/pqxx/largeobject.hxx, include/pqxx/pipeline.hxx,
 include/pqxx/result.hxx, include/pqxx/robusttransaction.hxx,
 include/pqxx/row.hxx, include/pqxx/strconv.hxx, include/pqxx/tablereader.hxx,